--- a/index.css
+++ b/index.css
@@ -37,7 +37,7 @@ body {
   display: flex;
   margin-top: 1vw;
   padding-right: 60vw;
-  background-image: url(logo.jpg);
+  background-image: url(logo.JPG);
   background-repeat: no-repeat;
   height: 5vw;
   flex-direction: column;
